--- a/NorthwindBCS/odatasrc/C#/packages/repositories.config
+++ b/NorthwindBCS/odatasrc/C#/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\AdventureWorksOData\packages.config" />
+  <repository path="..\TempApp\packages.config" />
 </repositories>
